# regula

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
configs/: _fixture-small.yaml  adb-vol1.yaml
docs/: approach.md  schemas.md
schemas/: block.schema.json  chunk.schema.json  config.schema.json  deferred.schema.json  document.schema.json  glossary.schema.json  links.schema.json  pages.schema.json  references_index.schema.json  stage_report.schema.json  toc.schema.json  validation_report.schema.json
scripts/: make_placeholder_pdf.py
src/regula/: __init__.py  _diff.py  _schema_export.py  cli.py  config.py  deferred.py  inspect.py  logging.py  pipeline.py  schemas.py
src/regula/parsers/: __init__.py  pymupdf_parser.py
src/regula/stages/: __init__.py  build_toc.py  chunk.py  extract_blocks.py  extract_glossary.py  finalise.py  parse.py  resolve_references.py  validate.py
tests/: conftest.py  test_blocks.py  test_chunk_walker.py  test_cli_commands.py  test_config.py  test_contract_invariants.py  test_deferred_features.py  test_extract_glossary.py  test_inspect.py  test_pipeline_skeleton.py  test_reproducibility_skeleton.py  test_schema_export.py  test_schemas.py  test_smoke.py  test_stage_isolation.py  test_stages_real.py  test_validate_invariants_on_empty.py  test_zero_config.py
