[project]
name = "regula"
version = "0.0.1"
description = "Deterministic, configurable PDF → structured-chunks ingestion pipeline for regulatory and standards documents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "TBD" }
authors = [{ name = "regula contributors" }]

dependencies = [
    "docling>=2.0",
    "pymupdf>=1.24",
    "pydantic>=2.7",
    "jsonschema>=4.22",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
regula = "regula.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/regula"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
